[package]
name = "open_notify"
version = "0.1.0"
authors = ["Patrick Hoffmann <pat@thats-software.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2.4"
futures = "0.3.1"
chrono ="0.4.19"
