[package]
name = "open_notify"
version = "0.1.8"
authors = ["Patrick Hoffmann <pat@thats-software.com>"]
edition = "2018"
description = "fetches information about spotting International Space Station from open-notify.org"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/open_notify"
homepage = "https://open_notify.thats-software.com"
keywords = ["open-notify", "ISS", "spot" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", default-features = false, features = ["blocking"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
http = { version = "0.2.4", default-features = false }
futures = { version = "0.3.1", default-features = false, features = ["executor"] }
chrono ={ version = "0.4.19" }
